--- a/index.html
+++ b/index.html
@@ -186,17 +186,17 @@
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection"><a class="ps-collection__morelink" href="#">Sunglasses</a><img class="ps-fullwidth" src="images/collection/home-1/sunglasses.jpg" alt="" class="sunglasses"></div>
+                            <div class="ps-collection"><a class="ps-collection__morelink" href="#">Sunglasses</a><img class="ps-fullwidth" src="images/collection/home-1/sunglasses.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection"><a class="ps-collection__morelink" href="#">Footwear</a><img class="ps-fullwidth" src="images/collection/home-1/4.jpg" alt=""></div>
+                            <div class="ps-collection"><a class="ps-collection__morelink" href="#">Footwear</a><img class="ps-fullwidth" src="images/collection/home-1/footware.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection"><a class="ps-collection__morelink" href="#">Man Collection</a><img class="ps-fullwidth" src="images/collection/home-1/5.jpg" alt=""></div>
+                            <div class="ps-collection"><a class="ps-collection__morelink" href="#">Infants Collection</a><img class="ps-fullwidth" src="images/collection/home-1/main.jpg" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                                 <div class="ps-product--1" data-mh="product-item">
                                     <div class="ps-product__thumbnail">
                                         <div class="ps-badge ps-badge--hot"><span>hot</span></div>
-                                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/r1.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -255,7 +255,7 @@
                             </div>
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
-                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/2.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/r2.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -269,7 +269,7 @@
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
                                     <div class="ps-product__thumbnail">
-                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/r3.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -284,7 +284,7 @@
                                 <div class="ps-product--1" data-mh="product-item">
                                     <div class="ps-product__thumbnail">
                                         <div class="ps-badge ps-badge--new"><span>New</span></div>
-                                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/r4.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -298,7 +298,7 @@
                             </div>
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
-                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/r5.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -312,7 +312,7 @@
                             </div>
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
-                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/r6.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -326,7 +326,7 @@
                             </div>
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
-                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/r7.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -340,7 +340,7 @@
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
                                     <div class="ps-product__thumbnail">
-                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/8.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/r8.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -353,7 +353,7 @@
                             </div>
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
-                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/9.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/r9.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -366,7 +366,7 @@
                             </div>
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
-                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/10.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/r10.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -380,7 +380,7 @@
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
                                     <div class="ps-product__thumbnail">
-                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/11.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-1/r11.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -395,7 +395,7 @@
                                 <div class="ps-product--1" data-mh="product-item">
                                     <div class="ps-product__thumbnail">
                                         <div class="ps-badge ps-badge--hot"><span>hot</span></div>
-                                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/12.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/r12.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -408,7 +408,7 @@
                             </div>
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
-                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/13.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/r13.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -423,7 +423,7 @@
                                 <div class="ps-product--1" data-mh="product-item">
                                     <div class="ps-product__thumbnail">
                                         <div class="ps-badge ps-badge--hot"><span>hot</span></div>
-                                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/14.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-1/r14.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
@@ -436,7 +436,7 @@
                             </div>
                             <div class="ps-product-column">
                                 <div class="ps-product--1" data-mh="product-item">
-                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/15.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                                    <div class="ps-product__thumbnail"><img src="images/product/home-1/r15.webp" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
